--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,14 @@ body {
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
+
+audio::-webkit-media-controls-play-button,
+audio::-webkit-media-controls-panel {
+	background-color: transparent;
+	color: transparent;
+}
+
+audio {
+	background-color: transparent;
+	color: transparent;
+}
